--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_barcode_scanner: ^2.0.0
+  firebase:
+  firebase_database:
+  firebase_core:
+  cloud_firestore:
 
   barcode_widget: ^1.5.0
 
