--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.demo.shopping_app">
+    <uses-permission android:name="android.permission.INTERNET" />
    <application
-        android:label="shopping_app"
+        android:label="Scan and Buy"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
