--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   font_awesome_flutter:
   barcode_widget: ^1.5.0
 
+  google_sign_in:
+  flutter_signin_button:
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -60,8 +63,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - images/splash_two.png
-     #- images/splash.png
+    - images/splash_two.png
+    #- images/art.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
